# RAG-against-the-machine

./: Makefile  Planning.txt  README.md  pyproject.toml
data/index_vllm/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  sources.pkl  vocab.index.json
src/: BM25.py  __main__.py  chunkers.py  cli.py  ingestion.py  models.py
