[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "A RAG system for vLLM codebase interrogation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "mlorenzo" }
]

dependencies = [
    "pydantic>=2.0.0",
    "fire>=0.6.0",
    "transformers>=4.35.0",
    "tqdm>=4.66.0",
    "bm25s>=0.1.8",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "langchain>=0.1.0",
    "tokenizers>=0.15.0",
]

# Correction ici : Suppression de 'tool.uv' devant dependency-groups
[dependency-groups]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "types-tqdm>=4.66.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
rag-against-the-machine = "src.__main__:main"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist"